# drf-api

./: README.md  pyproject.toml
blog_api_project/blog_api_project/: settings.py  urls.py
blog_api_project/posts/: models.py  serializer.py  tests.py  urls.py  views.py
